// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screenshots getBase64FullPageScreenshotsData should get hide elements for the Android nativeWebScreenshot fullpage screenshot 1`] = `
Object {
  "data": Array [
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 0,
      "imageHeight": 1176,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 124,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 1176,
      "imageHeight": 400,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 924,
      "screenshot": "mocked-screenshot-string",
    },
  ],
  "fullPageHeight": 1552,
  "fullPageWidth": 2732,
}
`;

exports[`screenshots getBase64FullPageScreenshotsData should get the Android ChromeDriver fullpage screenshot data 1`] = `
Object {
  "data": Array [
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 0,
      "imageHeight": 1600,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 1600,
      "imageHeight": 800,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 800,
      "screenshot": "mocked-screenshot-string",
    },
  ],
  "fullPageHeight": 2400,
  "fullPageWidth": 2732,
}
`;

exports[`screenshots getBase64FullPageScreenshotsData should get the Android nativeWebScreenshot fullpage screenshot data 1`] = `
Object {
  "data": Array [
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 0,
      "imageHeight": 1576,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 148,
      "screenshot": "mocked-screenshot-string",
    },
  ],
  "fullPageHeight": 1552,
  "fullPageWidth": 2732,
}
`;

exports[`screenshots getBase64FullPageScreenshotsData should get the desktop browser fullpage screenshot data 1`] = `
Object {
  "data": Array [
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 0,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 1536,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 3072,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 4608,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 6144,
      "imageHeight": 256,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 1280,
      "screenshot": "mocked-screenshot-string",
    },
  ],
  "fullPageHeight": 6400,
  "fullPageWidth": 2732,
}
`;

exports[`screenshots getBase64FullPageScreenshotsData should get the iOS fullpage screenshot data 1`] = `
Object {
  "data": Array [
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 0,
      "imageHeight": 1576,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 200,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 1576,
      "imageHeight": 824,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 976,
      "screenshot": "mocked-screenshot-string",
    },
  ],
  "fullPageHeight": 2376,
  "fullPageWidth": 2732,
}
`;

exports[`screenshots getBase64FullPageScreenshotsData should get the iOS fullpage screenshot data for a landscape iPad 1`] = `
Object {
  "data": Array [
    Object {
      "canvasWidth": 2412,
      "canvasYPosition": 0,
      "imageHeight": 776,
      "imageWidth": 2412,
      "imageXPosition": 320,
      "imageYPosition": 106,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2412,
      "canvasYPosition": 776,
      "imageHeight": 424,
      "imageWidth": 2412,
      "imageXPosition": 320,
      "imageYPosition": 482,
      "screenshot": "mocked-screenshot-string",
    },
  ],
  "fullPageHeight": 1176,
  "fullPageWidth": 2412,
}
`;

exports[`screenshots getBase64FullPageScreenshotsData should hide elements for the Android ChromeDriver fullpage screenshot 1`] = `
Object {
  "data": Array [
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 0,
      "imageHeight": 1600,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 1600,
      "imageHeight": 800,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 800,
      "screenshot": "mocked-screenshot-string",
    },
  ],
  "fullPageHeight": 2400,
  "fullPageWidth": 2732,
}
`;

exports[`screenshots getBase64FullPageScreenshotsData should hide elements for the desktop browser fullpage screenshot 1`] = `
Object {
  "data": Array [
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 0,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 1536,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 3072,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 4608,
      "imageHeight": 1536,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 0,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 6144,
      "imageHeight": 256,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 1280,
      "screenshot": "mocked-screenshot-string",
    },
  ],
  "fullPageHeight": 6400,
  "fullPageWidth": 2732,
}
`;

exports[`screenshots getBase64FullPageScreenshotsData should hide elements for the iOS fullpage screenshot 1`] = `
Object {
  "data": Array [
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 0,
      "imageHeight": 1576,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 200,
      "screenshot": "mocked-screenshot-string",
    },
    Object {
      "canvasWidth": 2732,
      "canvasYPosition": 1576,
      "imageHeight": 824,
      "imageWidth": 2732,
      "imageXPosition": 0,
      "imageYPosition": 976,
      "screenshot": "mocked-screenshot-string",
    },
  ],
  "fullPageHeight": 2376,
  "fullPageWidth": 2732,
}
`;
